# chess

./: .clang-format  .gitignore  CMakeLists.txt  README.md  anchors.txt  pixi.toml  setup.sh  sprt.sh  tournament.py
.github/workflows/: release.yml
src/: bb.cpp  bb.h  board.cpp  board.h  cfg.h  common.cpp  common.h  eval.cpp  eval.h  hash.cpp  hash.h  io.cpp  io.h  logging.cpp  logging.h  lookup.cpp  lookup.h  main.cpp  movegen.cpp  movegen.h  movepick.cpp  movepick.h  perf.cpp  perf.h  search.cpp  search.h  tt.cpp  tt.h  uci.cpp  uci.h
test/: CMakeLists.txt  movegen_test.cpp
